--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TO-DO</title>
   </head>
-  <body class="bg-lime-50">
+  <body class="bg-lime-50 font-mono">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
